fix: remove horizontal scrollbar in header

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -9,10 +9,13 @@
   width: 100%;
   height: 50px;
   border-bottom: 1px solid gray;
-  padding-left: 20px;
 }
 
 .link {
   color: black;
+
+  &:first-of-type {
+    margin-left: 20px;
+  }
 }
 
